[package]
name = "gensokyo"
version = "0.1.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

[dependencies]
rlibc = "1.0"
spin = "0.4.3"

[dependencies.efi]
path = "efi"

[lib]
name = "gensokyo"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
